add jar packaging